[build-system]
requires = ["hatchling", "versioneer[toml]"]
build-backend = "hatchling.build"

[project]
name = "pycc"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "T Daniel Crawford", email = "crawdad@vt.edu" }
]
license = { text = "BSD 3-Clause" }

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opt_einsum",
    "scipy",
    "torch"
]

[tool.hatch.version]
source = "versioneer"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-runner"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/pycc/_version.py"
versionfile_build = "pycc/_version.py"
tag_prefix = ""
parentdir_prefix = "pycc-"